AC_INIT([lldpad], [0.9.38])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_LEX
AC_PROG_LIBTOOL

PKG_CHECK_MODULES(LIBCONFIG, libconfig,
	AM_CONDITIONAL(BUILTIN_LIBCONFIG, false),
	AM_CONDITIONAL(BUILTIN_LIBCONFIG, true))
AC_SUBST(LIBCONFIG_CFLAGS)
AC_SUBST(LIBCONFIG_LIBS)

AC_CONFIG_SUBDIRS([libconfig-1.3.2])
AC_CONFIG_FILES([Makefile include/version.h lldpad.spec lldpad.pc dcbd.pc])
AC_OUTPUT
